--- a/Responsive.css
+++ b/Responsive.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*------------------HEADER-----------------*/
 /*------------------HEADER-----------------*/
 /*-------------ATNA HOST-----------------*/
@@ -244,11 +245,6 @@
   .header .headerContainer .header .rest .layer2 a.item span {
     font-size: 11px;
   }
-  .header .headerContainer .header .rest .layer2 .item.four {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
   .header .headerContainer .header .signupButtonLayer {
     display: none;
   }
@@ -286,24 +282,7 @@
   .header .headerContainer {
     margin-top: 45px;
     border-top: 10px solid #ededed;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 20px;
-  }
-  .header .headerContainer > *,
-  .header .headerContainer .calendar {
-    display: none;
+    display: block;
   }
   .header .headerContainer .logo {
     display: block;
@@ -324,22 +303,40 @@
   }
   .header .headerContainer .header {
     margin-top: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    gap: 40px;
+    float: right;
   }
   .header .headerContainer .header .signupButtonLayer {
     display: block;
+    margin: 45px 0;
+    margin-right: 10px;
   }
-  .header .headerContainer .header .rest .layer2 .item:not(.four) {
+  .header .headerContainer .header .rest {
     display: none;
   }
-  .header .headerContainer .header .rest .inputWrapper {
+  .header .headerContainer .calendar {
+    float: left;
+    width: 150px;
+    height: 150px;
+    background: url(./images/img/Header-Footer.png);
+    height: 94.5px;
+    width: 94.5px;
+    margin: auto;
+    background-position: -527px -31px;
+    background-size: 381%;
+    margin: 25px;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+    margin-bottom: 65px;
+  }
+  .header .headerContainer .calendar::before {
+    content: "تقویم آموزشی";
+    position: absolute;
+    bottom: -22px;
+    color: #0d72a1;
+    font-size: 11px;
+    font-weight: bold;
+  }
+  .header .headerContainer .calendar .FatLIne {
     display: none;
   }
   .header .headerContainer .slider {
@@ -357,6 +354,7 @@
   }
   .atnaHost > span {
     padding: 0;
+    font-size: 15px;
   }
   .atnaHost::before, .atnaHost::after {
     width: 32px;
