--- a/Responsive.scss
+++ b/Responsive.scss
@@ -118,7 +118,7 @@
   }
 }
 
-/* Large devices (laptops/desktops, 992px till 767 and down) */
+/* Large devices (laptops/desktops, 992px till 769 and down) */
 @media only screen and (max-width: 992px) {
   .header {
     .topBar {
@@ -161,103 +161,34 @@
     }
   }
   .footer {
-    $scale: 3;
-    .rightTop {
-      .layer {
-        .text {
-          font-size: 22pt / $scale;
-        }
-      }
-    }
-
-    .rightTop {
-      .inputwrapper {
-        .emailInput {
-          font-size: 20pt / $scale;
-        }
-      }
-    }
-
-    .rightTop {
-      .inputwrapper {
-        .icon {
-          font-size: 18pt / $scale;
-        }
-      }
-    }
-
-    .centerTop {
-      .layer1 {
-        p.title {
-          font-size: 25pt / $scale;
-        }
-        p.address {
-          font-size: 20pt / $scale;
-        }
-        p.site {
-          font-size: 25pt / $scale;
-        }
-        p.num {
-          font-size: 20pt / $scale;
-        }
-      }
-    }
-
-    .leftTop {
-      .counsel {
-        .number {
-          font-size: 25pt / $scale;
-        }
-      }
-    }
-
-    .leftTop {
-      .counsel {
-        .info {
-          font-size: 20pt / $scale;
-        }
-      }
-    }
-
-    .centerCenter {
-      .layer2 {
-        .item {
-          > span {
-            font-size: 18pt / $scale;
-          }
-        }
-      }
-    }
-
-    .centerBottom {
-      .wholeNav {
-        .nav1 {
-          .item {
-            font-size: 18pt / $scale;
-          }
-        }
-      }
-    }
-
-    .centerBottom {
-      .wholeNav {
-        .nav2 {
-          .item {
-            font-size: 24pt / $scale;
-          }
-        }
-      }
-    }
-
     .leftBottom {
       .telegraph {
-        font-size: 25pt / $scale;
+        font-size: 15px;
+      }
+    }
+    .rightTop {
+      .layer {
+        position: relative;
+        .img {
+          position: absolute;
+          top: -60px;
+        }
+      }
+      .inputwrapper {
+        .emailInput {
+          width: 170px;
+        }
+      }
+    }
+    .centerBottom {
+      .wholeNav .nav1 .item {
+        line-height: 21px;
       }
     }
   }
 }
 
-/* Medium devices (landscape tablets, 768px till 599 and down) */
+/* Medium devices (landscape tablets, 768px till 601 and down) */
 @media only screen and (max-width: 768px) {
   .header {
     .topBar {
@@ -318,7 +249,65 @@
     }
   }
   .footer {
-    display: none;
+    height: auto;
+    grid-template-columns: 25% 25% 25% 25%;
+
+    .centerTop {
+      grid-column: 1 / 5;
+      grid-row: 1/2;
+    }
+    .centerCenter {
+      grid-column: 1/5;
+      grid-row: 2/3;
+    }
+    .centerBottom {
+      grid-column: 1/5;
+      grid-row: 3/4;
+      margin: 35px 0;
+
+      .wholeNav {
+        width: 100%;
+        .nav1 {
+          margin: auto;
+          height: auto;
+        }
+        .line {
+          margin-top: 17px;
+          margin-bottom: 13px;
+        }
+      }
+    }
+    .rightTop {
+      grid-column: 1 / 3;
+      grid-row: 4/5;
+      .layer .img {
+        position: static;
+      }
+    }
+    .leftTop {
+      grid-column: 3 / 5;
+      grid-row: 4/5;
+    }
+    .rightCenter {
+      grid-column: 1 / 3;
+      grid-row: 5/6;
+    }
+    .leftCenter {
+      grid-column: 3 / 5;
+      grid-row: 5/6;
+    }
+    .rightBottom {
+      grid-column: 1/5;
+      grid-row: 6/7;
+      margin-top: 45px;
+      .eNamad {
+        width: 110px;
+        border-width: 5px;
+      }
+    }
+    .leftBottom {
+      display: none;
+    }
   }
 }
 
@@ -385,6 +374,56 @@
     &::after,
     &::before {
       width: 48px;
+    }
+  }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 20px 7px;
+
+    $footerOrder: centerTop, centerCenter, rightTop, rightCenter, leftTop,
+      leftCenter, rightBottom;
+    @for $i from 1 through length($footerOrder) {
+      $item: nth($footerOrder, $i);
+      .#{$item} {
+        order: $i;
+      }
+    }
+
+    > * {
+      margin-bottom: 40px;
+    }
+    .leftTop,
+    .rightTop,
+    .centerTop,
+    .rightBottom {
+      margin-bottom: 0;
+    }
+
+    .leftBottom {
+      display: none;
+    }
+    .centerBottom {
+      display: none;
+    }
+    .rightTop {
+      .layer {
+        align-self: auto;
+      }
+    }
+    .centerCenter {
+      .layer2 {
+        gap: 20px;
+      }
+      .hr {
+        width: 100%;
+      }
+    }
+    .rightBottom {
+      .eNamad {
+        position: static;
+      }
     }
   }
 }
