--- a/Responsive.css
+++ b/Responsive.css
@@ -92,7 +92,7 @@
   }
 }
 
-/* Large devices (laptops/desktops, 992px till 767 and down) */
+/* Large devices (laptops/desktops, 992px till 769 and down) */
 @media only screen and (max-width: 992px) {
   .header .topBar {
     padding-right: 25px;
@@ -132,48 +132,25 @@
         flex-wrap: wrap;
     gap: 60px;
   }
-  .footer .rightTop .layer .text {
-    font-size: 7.33333pt;
+  .footer .leftBottom .telegraph {
+    font-size: 15px;
+  }
+  .footer .rightTop .layer {
+    position: relative;
+  }
+  .footer .rightTop .layer .img {
+    position: absolute;
+    top: -60px;
   }
   .footer .rightTop .inputwrapper .emailInput {
-    font-size: 6.66667pt;
-  }
-  .footer .rightTop .inputwrapper .icon {
-    font-size: 6pt;
-  }
-  .footer .centerTop .layer1 p.title {
-    font-size: 8.33333pt;
-  }
-  .footer .centerTop .layer1 p.address {
-    font-size: 6.66667pt;
-  }
-  .footer .centerTop .layer1 p.site {
-    font-size: 8.33333pt;
-  }
-  .footer .centerTop .layer1 p.num {
-    font-size: 6.66667pt;
-  }
-  .footer .leftTop .counsel .number {
-    font-size: 8.33333pt;
-  }
-  .footer .leftTop .counsel .info {
-    font-size: 6.66667pt;
-  }
-  .footer .centerCenter .layer2 .item > span {
-    font-size: 6pt;
+    width: 170px;
   }
   .footer .centerBottom .wholeNav .nav1 .item {
-    font-size: 6pt;
-  }
-  .footer .centerBottom .wholeNav .nav2 .item {
-    font-size: 8pt;
-  }
-  .footer .leftBottom .telegraph {
-    font-size: 8.33333pt;
+    line-height: 21px;
   }
 }
 
-/* Medium devices (landscape tablets, 768px till 599 and down) */
+/* Medium devices (landscape tablets, 768px till 601 and down) */
 @media only screen and (max-width: 768px) {
   .header .topBar {
     padding: 5px 10px;
@@ -224,6 +201,95 @@
     width: 307px;
   }
   .footer {
+    height: auto;
+    -ms-grid-columns: 25% 25% 25% 25%;
+        grid-template-columns: 25% 25% 25% 25%;
+  }
+  .footer .centerTop {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  .footer .centerCenter {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .footer .centerBottom {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    margin: 35px 0;
+  }
+  .footer .centerBottom .wholeNav {
+    width: 100%;
+  }
+  .footer .centerBottom .wholeNav .nav1 {
+    margin: auto;
+    height: auto;
+  }
+  .footer .centerBottom .wholeNav .line {
+    margin-top: 17px;
+    margin-bottom: 13px;
+  }
+  .footer .rightTop {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .footer .rightTop .layer .img {
+    position: static;
+  }
+  .footer .leftTop {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3 / 5;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .footer .rightCenter {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+  .footer .leftCenter {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3 / 5;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+  .footer .rightBottom {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    grid-row: 6/7;
+    margin-top: 45px;
+  }
+  .footer .rightBottom .eNamad {
+    width: 110px;
+    border-width: 5px;
+  }
+  .footer .leftBottom {
     display: none;
   }
 }
@@ -262,6 +328,81 @@
   }
   .atnaHost::after, .atnaHost::before {
     width: 48px;
+  }
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+    padding: 20px 7px;
+  }
+  .footer .centerTop {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .footer .centerCenter {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .footer .rightTop {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .footer .rightCenter {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  .footer .leftTop {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+  }
+  .footer .leftCenter {
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6;
+  }
+  .footer .rightBottom {
+    -webkit-box-ordinal-group: 8;
+        -ms-flex-order: 7;
+            order: 7;
+  }
+  .footer > * {
+    margin-bottom: 40px;
+  }
+  .footer .leftTop,
+  .footer .rightTop,
+  .footer .centerTop,
+  .footer .rightBottom {
+    margin-bottom: 0;
+  }
+  .footer .leftBottom {
+    display: none;
+  }
+  .footer .centerBottom {
+    display: none;
+  }
+  .footer .rightTop .layer {
+    -ms-flex-item-align: auto;
+        -ms-grid-row-align: auto;
+        align-self: auto;
+  }
+  .footer .centerCenter .layer2 {
+    gap: 20px;
+  }
+  .footer .centerCenter .hr {
+    width: 100%;
+  }
+  .footer .rightBottom .eNamad {
+    position: static;
   }
 }
 
