--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ body {
 }
 
 .signupButtonLayer .orangeButton {
-  font-size: 15px;
   height: 33px;
   -webkit-box-sizing: border-box !important;
           box-sizing: border-box !important;
@@ -93,6 +92,7 @@ body {
 }
 
 .orangeButton {
+  font-size: 15px !important;
   padding: 7px 0;
   border-radius: 24px;
   border: none;
@@ -136,7 +136,7 @@ body {
   display: none;
 }
 
-/*--------General--------------*/
+/*--------Components--------------*/
 #resMenu {
   height: 100%;
   width: 0;
@@ -466,8 +466,8 @@ body {
   width: 117px;
   height: 0;
   overflow: hidden;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   opacity: 0;
 }
 
