--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,6 @@ body {
     background-size: 678%;
   }
   .orangeButton {
-    font-size: 15px;
     height: 33px;
     box-sizing: border-box !important;
     padding: 0;
@@ -47,6 +46,7 @@ body {
 }
 
 .orangeButton {
+  font-size: 15px !important;
   padding: 7px 0;
   border-radius: 24px;
   border: none;
@@ -73,7 +73,7 @@ body {
 .noDisplay {
   display: none;
 }
-/*--------General--------------*/
+/*--------Components--------------*/
 #resMenu {
   height: 100%;
   width: 0;
@@ -287,7 +287,7 @@ body {
         width: 117px;
         height: 0;
         overflow: hidden;
-        transition: .4s;
+        transition: 0.4s;
         opacity: 0;
 
         a {
