slider function ready

--- a/style.scss
+++ b/style.scss
@@ -649,19 +649,107 @@ body {
     .space {
       grid-area: space;
     }
-    .slider {
-      z-index: 1;
+    #slider {
       grid-area: content;
-      box-shadow: $slider-shadow;
-      .pic {
-        width: 100%;
-        height: 100%;
-        min-height: 200px;
-        background-color: orange;
-        color: white;
-        font-weight: bold;
-        font-size: 25px;
-        @include flex(c, c);
+      position: relative;
+      z-index: 1;
+      margin-left: 10px;
+
+      &.single {
+        #sliderNext, #sliderPre, .dots {
+          display: none;
+        }
+      }
+
+      &.none {
+        #sliderNext, #sliderPre, .dots {
+          display: none;
+        }
+        .images {
+          background-color: grey;
+          width: 1105px;
+          height: 383px;
+          @include flex(c,c);
+          &::before {
+            content: 'تصویر پیدا نشد :/';
+            color: white;
+          }
+        }
+      }
+
+      @keyframes sliderFade {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+      .images {
+        box-shadow: $slider-shadow;
+        height: min-content;
+        img {
+          opacity: 0;
+          position: absolute;
+          display: block;
+          transition: 0.6s;
+          top: 0;
+          &.active {
+            opacity: 100;
+            position: static;
+          }
+        }
+      }
+
+      #sliderNext,
+      #sliderPre {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        font-size: 30px;
+        padding: 20px 15px;
+        background-color: #00000012;
+        margin: auto;
+        height: max-content;
+
+        &:hover {
+          background-color: #00000030;
+          cursor: pointer;
+        }
+      }
+      #sliderPre {
+        left: 0;
+        border-radius: 0 10px 10px 0;
+      }
+      #sliderNext {
+        right: 0;
+        border-radius: 10px 0 0 10px;
+      }
+      .dots {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: max-content;
+        margin: auto;
+        border-radius: 10px 10px 0 0;
+        padding-top: 10px;
+        display: flex;
+        flex-direction: row-reverse;
+        > * {
+          cursor: pointer;
+          @include square(13px);
+          margin: 0 2px;
+          background-color: #bbb;
+          border-radius: 50%;
+          display: inline-block;
+          transition: background-color 0.3s ease;
+
+          &:hover,
+          &.active {
+            background-color: #717171;
+          }
+        }
       }
     }
     .spaceRightSide {
