--- a/style.css
+++ b/style.css
@@ -985,24 +985,28 @@ body {
   grid-area: space;
 }
 
-.header .headerContainer .slider {
-  z-index: 1;
+.header .headerContainer #slider {
   -ms-grid-row: 4;
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: content;
-  -webkit-box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
-          box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
+  position: relative;
+  z-index: 1;
+  margin-left: 10px;
 }
 
-.header .headerContainer .slider .pic {
-  width: 100%;
-  height: 100%;
-  min-height: 200px;
-  background-color: orange;
-  color: white;
-  font-weight: bold;
-  font-size: 25px;
+.header .headerContainer #slider.single #sliderNext, .header .headerContainer #slider.single #sliderPre, .header .headerContainer #slider.single .dots {
+  display: none;
+}
+
+.header .headerContainer #slider.none #sliderNext, .header .headerContainer #slider.none #sliderPre, .header .headerContainer #slider.none .dots {
+  display: none;
+}
+
+.header .headerContainer #slider.none .images {
+  background-color: grey;
+  width: 1105px;
+  height: 383px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1016,6 +1020,117 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+.header .headerContainer #slider.none .images::before {
+  content: 'تصویر پیدا نشد :/';
+  color: white;
+}
+
+@-webkit-keyframes sliderFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes sliderFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.header .headerContainer #slider .images {
+  -webkit-box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
+          box-shadow: 0px 0px 41px rgba(0, 0, 0, 0.38);
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+
+.header .headerContainer #slider .images img {
+  opacity: 0;
+  position: absolute;
+  display: block;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  top: 0;
+}
+
+.header .headerContainer #slider .images img.active {
+  opacity: 100;
+  position: static;
+}
+
+.header .headerContainer #slider #sliderNext,
+.header .headerContainer #slider #sliderPre {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  font-size: 30px;
+  padding: 20px 15px;
+  background-color: #00000012;
+  margin: auto;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.header .headerContainer #slider #sliderNext:hover,
+.header .headerContainer #slider #sliderPre:hover {
+  background-color: #00000030;
+  cursor: pointer;
+}
+
+.header .headerContainer #slider #sliderPre {
+  left: 0;
+  border-radius: 0 10px 10px 0;
+}
+
+.header .headerContainer #slider #sliderNext {
+  right: 0;
+  border-radius: 10px 0 0 10px;
+}
+
+.header .headerContainer #slider .dots {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin: auto;
+  border-radius: 10px 10px 0 0;
+  padding-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.header .headerContainer #slider .dots > * {
+  cursor: pointer;
+  width: 13px;
+  height: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  -webkit-transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
+}
+
+.header .headerContainer #slider .dots > *:hover, .header .headerContainer #slider .dots > *.active {
+  background-color: #717171;
 }
 
 .header .headerContainer .spaceRightSide {
