--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ body {
     background: url("./images/img/Header-Footer.png");
     background-position: -5px -9px;
     background-size: 678%;
+    transition: .2s;
   }
   .orangeButton {
     height: 33px;
@@ -43,6 +44,36 @@ body {
       }
     }
   }
+  .content {
+    position: absolute;
+    background-color: $coolOrange;
+    padding: 12px;
+    z-index: 20;
+    border-radius: 5px;
+    opacity: 0;
+    box-shadow: 0px 0 6px rgba(0,0,0,0.27);
+    z-index: -5;
+    transition: .2s;
+    top: 50%;
+
+    > a {
+      display: block;
+      font-size: 13px;
+      font-family: iransansbold;
+      color: $themeBlue;
+    }
+  }
+
+  &.active {
+    .content {
+      opacity: 100;
+      z-index: 20;
+    top: calc(100% + 5px);
+  }
+  .click {
+    right: -35px;
+  }
+  }
 }
 
 .orangeButton {
@@ -57,6 +88,8 @@ body {
   font-size: 18pt / $fontScale;
   font-weight: bold;
   transition: 0.2s;
+  display: block;
+  text-align: center;
 }
 
 .hollowButton {
@@ -843,7 +876,8 @@ body {
           background: linear-gradient(to right, $fourStepsBoxGradient);
           border-radius: 20px;
           position: relative;
-          @include square(220px);
+          width: 220px;
+          height: 270px;
           @include flex(c, c);
           .coloredWrapper {
             $coloredWidth: 160px;
@@ -900,14 +934,15 @@ body {
             font-size: 20px;
           }
           .hover {
-            font-family: iranSansBold;
-            line-height: 19px;
+            font-family: iranSansmedium;
             text-align: center;
             opacity: 0;
             transition: 0.3s;
             position: absolute;
-            width: 90%;
+            width: 80%;
             transform: scale(0.6);
+            font-size: 14px;
+            line-height: 24px;
           }
           .image {
             @include square(60px);
