--- a/style.css
+++ b/style.css
@@ -69,8 +69,6 @@ body {
   background: url("./images/img/Header-Footer.png");
   background-position: -5px -9px;
   background-size: 678%;
-  -webkit-transition: .2s;
-  transition: .2s;
 }
 
 .signupButtonLayer .orangeButton {
@@ -93,38 +91,6 @@ body {
           box-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
 }
 
-.signupButtonLayer .content {
-  position: absolute;
-  background-color: #FEC715;
-  padding: 12px;
-  z-index: 20;
-  border-radius: 5px;
-  opacity: 0;
-  -webkit-box-shadow: 0px 0 6px rgba(0, 0, 0, 0.27);
-          box-shadow: 0px 0 6px rgba(0, 0, 0, 0.27);
-  z-index: -5;
-  -webkit-transition: .2s;
-  transition: .2s;
-  top: 50%;
-}
-
-.signupButtonLayer .content > a {
-  display: block;
-  font-size: 13px;
-  font-family: iransansbold;
-  color: #1d71b9;
-}
-
-.signupButtonLayer.active .content {
-  opacity: 100;
-  z-index: 20;
-  top: calc(100% + 5px);
-}
-
-.signupButtonLayer.active .click {
-  right: -35px;
-}
-
 .orangeButton {
   font-size: 15px !important;
   padding: 7px 0;
@@ -139,8 +105,6 @@ body {
   font-weight: bold;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  display: block;
-  text-align: center;
 }
 
 .hollowButton {
@@ -1312,7 +1276,7 @@ body {
   border-radius: 20px;
   position: relative;
   width: 220px;
-  height: 270px;
+  height: 220px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1382,17 +1346,16 @@ body {
 }
 
 .outlet .mainPageSection .flex .boxWrapper .box .hover {
-  font-family: iranSansmedium;
+  font-family: iranSansBold;
+  line-height: 19px;
   text-align: center;
   opacity: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
   position: absolute;
-  width: 80%;
+  width: 90%;
   -webkit-transform: scale(0.6);
           transform: scale(0.6);
-  font-size: 14px;
-  line-height: 24px;
 }
 
 .outlet .mainPageSection .flex .boxWrapper .box .image {
