prfile/signup added

--- a/style.css
+++ b/style.css
@@ -586,6 +586,23 @@ body {
           justify-content: space-between;
 }
 
+.header .headerContainer .header .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  font-family: iransansbold;
+  font-size: 16px;
+  text-align: center;
+}
+
 .header .headerContainer .header .rest {
   display: -webkit-box;
   display: -ms-flexbox;
