--- a/style.scss
+++ b/style.scss
@@ -362,6 +362,15 @@ body {
       padding: 50px 0;
       align-items: center;
       justify-content: space-between;
+      .user {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 15px;
+        font-family: iransansbold;
+        font-size: 16px;
+        text-align: center;
+      }
       .rest {
         @include flex(space-between, c);
         width: 100%;
