--- a/style.css
+++ b/style.css
@@ -465,8 +465,8 @@ body {
   left: 0;
   width: 117px;
   overflow: hidden;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   opacity: 0;
   font-family: iransansultralight;
   font-size: 13px;
@@ -491,9 +491,9 @@ body {
   display: -ms-grid;
   display: grid;
       grid-template-areas: "logo header calendar" "title navBar calendar" "spaceRightSide space calendar" "sideMenu content content";
-  -ms-grid-columns: 200px auto auto;
-      grid-template-columns: 200px auto auto;
-  padding-left: 5px;
+  -ms-grid-columns: 200px 65% auto;
+      grid-template-columns: 200px 65% auto;
+  padding-left: 10px;
 }
 
 .header .headerContainer > * {
@@ -617,7 +617,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 100%;
+  font-family: iransansmedium;
+  width: 65%;
 }
 
 .header .headerContainer .header .rest .layer2 {
@@ -709,7 +710,7 @@ body {
   padding: 5px 20px;
   text-indent: 20px;
   font-family: inherit;
-  width: 270px;
+  width: 235px;
 }
 
 .header .headerContainer .header .rest .inputWrapper .mainSearch:focus {
@@ -721,6 +722,44 @@ body {
   right: 12px;
   top: 13px;
   color: #1d71b9;
+}
+
+.header .headerContainer .header .Cooperation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 4px;
+  color: #d50c52;
+  font-size: 16px;
+  font-family: iransansbold;
+}
+
+.header .headerContainer .header .Cooperation svg {
+  width: 115px;
+}
+
+.header .headerContainer .header .Cooperation svg .cls-1 {
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.header .headerContainer .header .Cooperation:hover {
+  color: #1d71b9;
+  cursor: pointer;
+}
+
+.header .headerContainer .header .Cooperation:hover svg .cls-1 {
+  fill: #1d71b9;
 }
 
 .header .headerContainer .calendar {
@@ -1011,14 +1050,17 @@ body {
 .header .headerContainer .slider #slider {
   position: relative;
   z-index: 1;
-  margin-left: 10px;
 }
 
-.header .headerContainer .slider #slider.single #sliderNext, .header .headerContainer .slider #slider.single #sliderPre, .header .headerContainer .slider #slider.single .dots {
+.header .headerContainer .slider #slider.single #sliderNext,
+.header .headerContainer .slider #slider.single #sliderPre,
+.header .headerContainer .slider #slider.single .dots {
   display: none;
 }
 
-.header .headerContainer .slider #slider.none #sliderNext, .header .headerContainer .slider #slider.none #sliderPre, .header .headerContainer .slider #slider.none .dots {
+.header .headerContainer .slider #slider.none #sliderNext,
+.header .headerContainer .slider #slider.none #sliderPre,
+.header .headerContainer .slider #slider.none .dots {
   display: none;
 }
 
@@ -1042,7 +1084,7 @@ body {
 }
 
 .header .headerContainer .slider #slider.none .images::before {
-  content: 'تصویر پیدا نشد :/';
+  content: "تصویر پیدا نشد :/";
   color: white;
 }
 
