--- a/Responsive.scss
+++ b/Responsive.scss
@@ -1,29 +1,4 @@
 @import "./Variables";
-/* Extra extra large devices (TV, 1300px till 1201 and down) */
-@media screen and (max-width: 1300px) {
-  .footer {
-    .rightTop {
-      .layer {
-        .text {
-          font-size: 10pt;
-        }
-      }
-    }
-    .rightBottom {
-      .eNamad {
-        // width: 100px;
-        border: 12px solid #333333;
-      }
-    }
-  }
-  .outlet {
-    .mainPageSection {
-      .courseSwiper {
-        width: 960px;
-      }
-    }
-  }
-}
 
 /* Extra large devices (large laptops and desktops, 1200px till 993 and down) */
 @media only screen and (max-width: 1200px) {
@@ -136,6 +111,9 @@
       .header {
         gap: 0;
         .rest .layer2 .item.four {
+          display: none;
+        }
+        .Cooperation {
           display: none;
         }
       }
@@ -334,6 +312,7 @@
       .header {
         .rest {
           .layer2 {
+            width: 130%;
             a.item span {
               font-size: 11px;
             }
