--- a/style.scss
+++ b/style.scss
@@ -719,12 +719,75 @@ body {
         .images {
           box-shadow: $slider-shadow;
           height: min-content;
-          img {
+          .img {
             opacity: 0;
             position: absolute;
-            display: block;
             transition: 0.6s;
             top: 0;
+            .title,
+            .des,
+            .button {
+              position: absolute;
+            }
+            .title {
+              top: 70px;
+              left: 20px;
+              display: block;
+              font-size: 62px;
+              font-family: iransansblack;
+              text-align: center;
+              width: 480px;
+              &.purple {
+                color: #951a82;
+              }
+              &.orange {
+                color: #e84e1a;
+              }
+              &.green {
+                color: #3aaa35;
+              }
+              &.yellow {
+                color: #feb52c;
+              }
+              &.long {
+                font-size: 49px;
+              }
+              &.lightBlue {
+                color: #63daf9;
+              }
+              &.tooLong {
+                font-size: 45px;
+              }
+
+              &::before {
+                content: "آموزشگاه تحلیل داده";
+                display: block;
+                font-size: 21px;
+                margin-bottom: 33px;
+              }
+            }
+            .des {
+              top: 200px;
+              left: 26px;
+              font-size: 41px;
+              font-family: iransansblack;
+              width: 500px;
+              text-align: center;
+              line-height: 55px;
+            }
+            .button {
+              left: 30px;
+              bottom: 30px;
+              background-color: #e84e1a;
+              color: white;
+              padding: 9px 43px;
+              font-size: 34px;
+              border-radius: 29px;
+              font-family: iransansmedium;
+            }
+            img {
+              display: block;
+            }
             &.active {
               opacity: 100;
               position: static;
